--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.16.1",
+    "@azure/msal-react": "^1.0.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
